# HIVEMIND

./: .env.example  .gitignore  AGENTS.md  FEEDBACK.md  README.md
apps/api/: pyproject.toml
apps/api/src/hivemind_api/: app.py
apps/api/tests/: conftest.py  test_app.py
apps/axl-node/: README.md  benchmark.py  benchmark_results.json  pyproject.toml  start_cluster.sh  stop_cluster.sh
apps/axl-node/tests/: conftest.py  test_smoke.py
apps/execution/: requirements.txt  run_quote_only.py  run_swap.py  uniswap_client.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.node.json
contracts/: README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/contracts/: ERC721ReceiverMock.sol  HivemindINFT.sol
contracts/scripts/: deploy-inft.ts  mint-inft.ts
contracts/test/: HivemindINFT.spec.ts
data/: README.md
data/seeds/: eth_price_ohlcv_90d.json  lp_events.json  mev_arb_latency.json  uniswap_pools.json  usdc_peg_events.json  whale_txs.json
data/snapshots/: agents.seed.json  gensyn-messages.seed.json  uniswap-quote.seed.json  zerog-storage.seed.json
docs/: architecture.md  local-simulation.md
docs/evidence/: 0g-inft-mint-2026-05-01.md  uniswap-swap-raw.txt  uniswap-swap-receipt.md
docs/integrations/: 0g-escalation.md  0g.md  gensyn-escalation.md  gensyn.md  uniswap.md
docs/scripts/: record_e2e_demo.py
examples/: panic_seller.py
patches/rl-swarm/: manager.patch  proposer_service.patch
scripts/: run-gensyn-self-hosted.sh
services/hivemind-bootnode/: bootnode.py
tasks/: lessons.md  todo.md
(+13 files in other folders)
