[project]
name = "hivemind-api"
version = "0.1.0"
description = "FastAPI surface for local HIVEMIND swarm simulations."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "hivemind-sdk",
    "uvicorn[standard]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
