[project]
name = "hivemind-api"
version = "0.1.0"
description = "FastAPI surface for local HIVEMIND swarm simulations."
requires-python = ">=3.11"
dependencies = [
    "eth-account>=0.13",
    "fastapi",
    "hivemind-sdk",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "uvicorn[standard]",
    "web3>=6.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
